--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.8.1
 chardet==5.2.0
 Django==4.2.16
+django-decouple==2.1
 django-humanize==0.1.2
 django-js-asset==2.2.0
 django-mailer==2.3.2
@@ -8,9 +9,11 @@ django-mptt==0.16.0
 django-newsletter==0.9.1
 django-tinymce==4.1.0
 easy-thumbnails==2.10
+gunicorn==23.0.0
 humanize==4.11.0
 ldif3==3.1.1
 lockfile==0.12.2
+packaging==24.1
 pillow==11.0.0
 python-card-me==0.9.3
 python-dateutil==2.9.0.post0
@@ -21,5 +24,4 @@ sqlparse==0.5.1
 surlex==0.2.0
 typing_extensions==4.12.2
 unicodecsv==0.14.1
-gunicorn
-
+whitenoise==6.7.0
