--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,6 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    # ❌ Pas de ports: Traefik s'en charge
     volumes:
       - .:/afriqconsulting/
       - static_volume:/afriqconsulting/static
@@ -27,7 +26,7 @@ services:
       - "traefik.http.routers.afriqweb.tls.certresolver=lets"
 
       # (Optionnel) Router HTTP -> redirection vers HTTPS
-      - "traefik.http.routers.afriqweb-http.rule=Host(`site.mondomaine.ci`)"
+      - "traefik.http.routers.afriqweb-http.rule=Host(`afriqconsulting.com`)"
       - "traefik.http.routers.afriqweb-http.entrypoints=web"
       - "traefik.http.routers.afriqweb-http.middlewares=afriqweb-https-redirect"
       - "traefik.http.middlewares.afriqweb-https-redirect.redirectscheme.scheme=https"
