--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,7 @@ services:
       - default
       - proxy   # 🔗 Réseau partagé avec Traefik
     labels:
+      - "traefik.docker.network=proxy"
       - "traefik.enable=true"
 
       # === Router HTTPS principal ===
@@ -26,13 +27,14 @@ services:
       - "traefik.http.routers.afriqweb.tls.certresolver=lets"
 
       # (Optionnel) Router HTTP -> redirection vers HTTPS
-      - "traefik.http.routers.afriqweb-http.rule=Host(`afriqconsulting.com`)"
-      - "traefik.http.routers.afriqweb-http.entrypoints=web"
-      - "traefik.http.routers.afriqweb-http.middlewares=afriqweb-https-redirect"
-      - "traefik.http.middlewares.afriqweb-https-redirect.redirectscheme.scheme=https"
+#      - "traefik.http.routers.afriqweb-http.rule=Host(`afriqconsulting.com`)"
+#      - "traefik.http.routers.afriqweb-http.entrypoints=web"
+#      - "traefik.http.routers.afriqweb-http.middlewares=afriqweb-https-redirect"
+#      - "traefik.http.middlewares.afriqweb-https-redirect.redirectscheme.scheme=https"
 
       # === Service (port interne du conteneur) ===
       - "traefik.http.services.afriqweb.loadbalancer.server.port=8000"
+      - "traefik.http.routers.afriqweb.service=afriqweb"
 
       # Middlewares utiles (compression + headers)
       - "traefik.http.routers.afriqweb.middlewares=afriqweb-compress,afriqweb-sec"
@@ -45,7 +47,7 @@ services:
       - "traefik.http.middlewares.afriqweb-sec.headers.referrerPolicy=no-referrer-when-downgrade"
 
       # Traefik doit utiliser le bon réseau
-      - "traefik.docker.network=proxy"
+
 
     healthcheck:
       test: ["CMD-SHELL", "curl -fsS http://127.0.0.1:8000/healthz || exit 1"]
