--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,6 @@ services:
     labels:
       - "traefik.enable=true"
       - "traefik.docker.network=proxy"
-
       # === HTTPS (apex) ===
       - "traefik.http.routers.afriqweb.rule=Host(`afriqconsulting.com`)"
       - "traefik.http.routers.afriqweb.entrypoints=websecure"
@@ -38,21 +37,15 @@ services:
       # === Service (port interne) ===
       - "traefik.http.services.afriqweb.loadbalancer.server.port=8000"
 
-      # === HTTP → HTTPS redir ===
-      - "traefik.http.routers.afriqweb-http.rule=Host(`afriqconsulting.com`,`www.afriqconsulting.com`)"
-      - "traefik.http.routers.afriqweb-http.entrypoints=web"
-      - "traefik.http.routers.afriqweb-http.middlewares=afriqweb-https-redirect"
-      - "traefik.http.middlewares.afriqweb-https-redirect.redirectscheme.scheme=https"
-
       # === Middlewares (compression + headers sécurité) ===
-      - "traefik.http.routers.afriqweb.middlewares=afriqweb-compress,afriqweb-sec"
-      - "traefik.http.routers.afriqweb-www.middlewares=afriqweb-compress,afriqweb-sec"
-      - "traefik.http.middlewares.afriqweb-compress.compress=true"
-      - "traefik.http.middlewares.afriqweb-sec.headers.stsSeconds=31536000"
-      - "traefik.http.middlewares.afriqweb-sec.headers.stsIncludeSubdomains=true"
-      - "traefik.http.middlewares.afriqweb-sec.headers.stsPreload=true"
-      - "traefik.http.middlewares.afriqweb-sec.headers.contentTypeNosniff=true"
-      - "traefik.http.middlewares.afriqweb-sec.headers.referrerPolicy=no-referrer-when-downgrade"
+#      - "traefik.http.routers.afriqweb.middlewares=afriqweb-compress,afriqweb-sec"
+#      - "traefik.http.routers.afriqweb-www.middlewares=afriqweb-compress,afriqweb-sec"
+#      - "traefik.http.middlewares.afriqweb-compress.compress=true"
+#      - "traefik.http.middlewares.afriqweb-sec.headers.stsSeconds=31536000"
+#      - "traefik.http.middlewares.afriqweb-sec.headers.stsIncludeSubdomains=true"
+#      - "traefik.http.middlewares.afriqweb-sec.headers.stsPreload=true"
+#      - "traefik.http.middlewares.afriqweb-sec.headers.contentTypeNosniff=true"
+#      - "traefik.http.middlewares.afriqweb-sec.headers.referrerPolicy=no-referrer-when-downgrade"
 
     healthcheck:
       test: ["CMD-SHELL", "curl -fsS http://127.0.0.1:8000/healthz || exit 1"]
@@ -61,7 +54,8 @@ services:
       retries: 3
 
 networks:
-  default: {}
+  default:
+    driver: bridge
   proxy:
     external: true
 
