--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,6 @@ services:
       - staticfiles_volume:/afriqconsulting/staticfiles
       - media_volume:/afriqconsulting/media
       - logs_volume:/afriqconsulting/logs
-      # ⚠️ En prod, éviter sqlite. Si tu restes dessus, garde le bind-mount :
       - ./db.sqlite3:/afriqconsulting/db.sqlite3
     env_file:
       - ./.env
@@ -20,33 +19,29 @@ services:
     labels:
       - "traefik.enable=true"
       - "traefik.docker.network=proxy"
+
       # === HTTPS (apex) ===
       - "traefik.http.routers.afriqweb.rule=Host(`afriqconsulting.com`)"
       - "traefik.http.routers.afriqweb.entrypoints=websecure"
+      - "traefik.http.routers.afriqweb.tls=true"
       - "traefik.http.routers.afriqweb.tls.certresolver=lets"
       - "traefik.http.routers.afriqweb.service=afriqweb"
 
       # === HTTPS (www) → même service ===
-#      - "traefik.http.routers.afriqweb-www.rule=Host(`www.afriqconsulting.com`)"
-#      - "traefik.http.routers.afriqweb-www.entrypoints=websecure"
-#      - "traefik.http.routers.afriqweb-www.tls=true"
-#      - "traefik.http.routers.afriqweb-www.tls.certresolver=lets"
-#      - "traefik.http.routers.afriqweb-www.service=afriqweb"
+      - "traefik.http.routers.afriqweb-www.rule=Host(`www.afriqconsulting.com`)"
+      - "traefik.http.routers.afriqweb-www.entrypoints=websecure"
+      - "traefik.http.routers.afriqweb-www.tls=true"
+      - "traefik.http.routers.afriqweb-www.tls.certresolver=lets"
+      - "traefik.http.routers.afriqweb-www.service=afriqweb"
 
       # === Service (port interne) ===
       - "traefik.http.services.afriqweb.loadbalancer.server.port=8000"
-      - "traefik.http.routers.afriqweb.middlewares=sec-headers@docker,compress@docker,ratelimit@docker"
 
-
-      # === Middlewares (compression + headers sécurité) ===
-#      - "traefik.http.routers.afriqweb.middlewares=afriqweb-compress,afriqweb-sec"
-#      - "traefik.http.routers.afriqweb-www.middlewares=afriqweb-compress,afriqweb-sec"
-#      - "traefik.http.middlewares.afriqweb-compress.compress=true"
-#      - "traefik.http.middlewares.afriqweb-sec.headers.stsSeconds=31536000"
-#      - "traefik.http.middlewares.afriqweb-sec.headers.stsIncludeSubdomains=true"
-#      - "traefik.http.middlewares.afriqweb-sec.headers.stsPreload=true"
-#      - "traefik.http.middlewares.afriqweb-sec.headers.contentTypeNosniff=true"
-#      - "traefik.http.middlewares.afriqweb-sec.headers.referrerPolicy=no-referrer-when-downgrade"
+      # === HTTP → HTTPS (optionnel mais recommandé) ===
+      - "traefik.http.routers.afriqweb-http.rule=Host(`afriqconsulting.com`,`www.afriqconsulting.com`)"
+      - "traefik.http.routers.afriqweb-http.entrypoints=web"
+      - "traefik.http.routers.afriqweb-http.middlewares=redir-https"
+      - "traefik.http.middlewares.redir-https.redirectscheme.scheme=https"
 
     healthcheck:
       test: ["CMD-SHELL", "curl -fsS http://127.0.0.1:8000/healthz || exit 1"]
