--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -56,14 +56,14 @@ services:
       - traefik.http.routers.afriq.middlewares=sec-headers@docker,compress@docker,ratelimit@docker
 
       # (Optionnel) Router HTTP pour rediriger en HTTPS
-      - traefik.http.routers.afriq-http.rule=Host(`afriqconsulting.com`,`www.afriqconsulting.com`)
-      - traefik.http.routers.afriq-http.entrypoints=web
-      - traefik.http.routers.afriq-http.middlewares=redir-https
-      - traefik.http.middlewares.redir-https.redirectscheme.scheme=https
+#      - traefik.http.routers.afriq-http.rule=Host(`afriqconsulting.com`,`www.afriqconsulting.com`)
+#      - traefik.http.routers.afriq-http.entrypoints=web
+#      - traefik.http.routers.afriq-http.middlewares=redir-https
+#      - traefik.http.middlewares.redir-https.redirectscheme.scheme=https
 
       # (Optionnel) Router HTTPS pour www
-      - traefik.http.routers.afriq-www.rule=Host(`www.afriqconsulting.com`)
-      - traefik.http.routers.afriq-www.entrypoints=websecure
-      - traefik.http.routers.afriq-www.tls.certresolver=lets
-      - traefik.http.routers.afriq-www.service=afriq
-      - traefik.http.routers.afriq-www.middlewares=sec-headers@docker,compress@docker,ratelimit@docker
+#      - traefik.http.routers.afriq-www.rule=Host(`www.afriqconsulting.com`)
+#      - traefik.http.routers.afriq-www.entrypoints=websecure
+#      - traefik.http.routers.afriq-www.tls.certresolver=lets
+#      - traefik.http.routers.afriq-www.service=afriq
+#      - traefik.http.routers.afriq-www.middlewares=sec-headers@docker,compress@docker,ratelimit@docker
