--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,10 +47,11 @@ services:
       - traefik.http.routers.afriq.rule=Host(`afriqconsulting.com`)
       - traefik.http.routers.afriq.entrypoints=websecure
       - traefik.http.routers.afriq.tls.certresolver=lets
+      - traefik.http.routers.afriq.service=afriq
 
       # Service → port interne
       - traefik.http.services.afriq.loadbalancer.server.port=8000
-      - traefik.http.services.afriq.loadbalancer.server.scheme=http
+#      - traefik.http.services.afriq.loadbalancer.server.scheme=http
 
       # Middlewares (utilise ceux déjà déclarés côté Traefik, comme pour smitci)
       - traefik.http.routers.afriq.middlewares=sec-headers@docker,compress@docker,ratelimit@docker
